Refactored lifecycle and call management classes; replaced CallId and Batch-related implementations with a unified, cleaner hierarchy: Lifecycle, Call, and Batch.